# DNK_DEMO

./: README.md  config.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libxml2/: DOCBparser.c  SAX.c  SAX2.c  buf.c  c14n.c  catalog.c  chvalid.c  debugXML.c  dict.c  encoding.c  entities.c  error.c  globals.c  hash.c  legacy.c  list.c  parser.c  parserInternals.c  pattern.c  relaxng.c  schematron.c  threads.c  tree.c  uri.c  valid.c  xinclude.c  xlink.c  xmlIO.c  xmlmemory.c  xmlmodule.c  xmlreader.c  xmlregexp.c  xmlsave.c  xmlschemas.c  xmlschemastypes.c  xmlstring.c  xmlunicode.c  xmlwriter.c  xpath.c  xpointer.c
app/src/main/cpp/libxml2/include/libxml/: buf.h  dict.h  elfgcchack.h  enc.h  encoding.h  hash.h  libxml.h  localpointer.h  platform.h  ptypes.h  save.h  schemasInternals.h  tree.h  ucnv.h  ucnv_err.h  uconfig.h  uenum.h  umachine.h  urename.h  utf.h  utf16.h  utf8.h  utf_old.h  utypes.h  uvernum.h  uversion.h  xmlversion.h  xmlversion.h.in
app/src/main/java/com/taxiao/cn/ndk/: MainActivity.java
